Overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
 
 .App {
   text-align: center;
+
+  [role=navigation] {
+    overflow: auto !important
+  }
+}
+
+*{
+  overflow-y: auto; /* Enable vertical scrolling */
+  max-height: 100vh; /* Example: limit height to viewport height */
 }
 
 .App-logo {
@@ -34,6 +43,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
